positioned carousel correctly on the page. Added a header for descriptor about trending section. All around better spacing of elements on the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,11 +12,12 @@ body{
 }
 
 #userCreateContainer{
-    height: 570px;
+    height: 70px;
     width: 294px;
     border: black solid;
     margin-left: 60px;
-    margin-bottom: 700px;
+    /* margin-bottom: 900px; */
+    
     
 }
 
@@ -24,7 +25,7 @@ body{
     height: 570px;
     width: 100%;
     border: solid black 2px;
-    margin-top: 390px;
+    /* margin-top: 390px; */
     background-color: #607178;
   
 }
@@ -73,7 +74,7 @@ footer{
     height: 350px;
     width: 450px;
     margin-left: 800px;
-    margin-top: 100px;
+    margin-bottom: 500px;
 
     
 }
@@ -84,12 +85,6 @@ footer{
     width: 200px;
 }
 
-#carousel{
-    width: 500px;
-    height: 300;
-    margin-left: 600px;
-   margin-top: -620px;
-}
 
 .btn{
     color: #FBD1A7;
@@ -114,9 +109,6 @@ z-index: 1;
 position: relative;
 background-color: #01273c;
 color: #FBD1A7;
-margin-bottom: 30px;
-padding-top: -20px;
-margin:
 }
 
 #myBucketHeader{
@@ -150,6 +142,16 @@ textarea{
 .btn{
     margin-left: 20px;
 
+    font-family: 'Overpass', sans-serif;
+
+}
+
+#trendingHeader{
+    border: black solid 2px;
+    width: 500px;
+    text-align: center;
+    background-color: #01273C;
+    color: #FBD1A7;
     font-family: 'Overpass', sans-serif;
 
 }
